# test_task_didenok_team_2

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
password/: models.py  serializers.py  urls.py  utils.py  views.py
password/migrations/: 0001_initial.py  0002_rename_password_passwordstorage__password_and_more.py  0003_rename__password_passwordstorage_password.py
